--- a/style.css
+++ b/style.css
@@ -323,7 +323,7 @@ header {
   position: relative;
   overflow: hidden;
   padding: 0;
-  background: #ff0000;
+  background: #00aaff;
 }
 
 /* video keeps original ratio */
