--- a/style.css
+++ b/style.css
@@ -595,10 +595,13 @@ header {
    PHONE RESPONSIVE DESIGN
    ========================= */
 @media (max-width: 480px) {
+#home .tab1{
+  background: linear-gradient(#0199ff,#e6e6e6);
+}
 
   /* Header */
   header {
-    height: 46px;
+    height: 50px;
     padding: 0 10px;
   }
 
@@ -612,12 +615,12 @@ header {
   }
 
   .tool-btn {
-    padding: 0 12px;
+    padding: 0 25px;
   }
 
   .tool-btn img {
-    width: 22px;
-    height: 22px;
+    width: 25px;
+    height: 25px;
   }
 
   /* Panel container */
